# simd-diagonal-load-json-demo

./: CMakeLists.txt  Dockerfile.alpine  Dockerfile.develop  Dockerfile.fedora  README-branch-demo_read_options_on_filedescriptor3.md  README-development.md  README.md  Singularity.debian  build-from-web-in-tmpdir.sh  build-locally-with-podman.bash
.github/: publish-container.yml
.github/workflows/: publish-container.yml
examples/example1/: demo-options.json  inputspec.json
src/: CMakeLists.txt  clang-format.sh
src/capnproto-schema/demo-run-options/: CMakeLists.txt
src/capnproto-schema/demo-run-options/include/simd-diagonal-load-json-demo/demo-run-options/: CMakeLists.txt  demo-run-options.capnp
src/capnproto-schema/input-matrices/: CMakeLists.txt
src/capnproto-schema/input-matrices/include/simd-diagonal-load-json-demo/input-matrices/: CMakeLists.txt  input-matrices.capnp
src/capnproto-schema/input-spec/: CMakeLists.txt
src/capnproto-schema/input-spec/include/simd-diagonal-load-json-demo/input-spec/: CMakeLists.txt  input-spec.capnp
src/capnproto-schema/output-matrices/: CMakeLists.txt
src/capnproto-schema/output-matrices/include/simd-diagonal-load-json-demo/output-matrices/: CMakeLists.txt  output-matrices.capnp
src/cmd/demo/: CMakeLists.txt  demo.cc
src/cmd/generate-input/: CMakeLists.txt  generate-input.cc  parsed_options.h  print_generated_input.cc  print_generated_input.h  try_to_parse_argv.cc  try_to_parse_argv.h
src/defines-from-cmake-variables/: CMakeLists.txt
src/demo/: CMakeLists.txt  demo.cc
src/demo-plugin/: CMakeLists.txt  demo_plugin.cc  demo_plugin.h  json_matrix.h
src/demo-plugin-interface/: CMakeLists.txt
src/demo-plugin-interface/include/simd-diagonal-load-json-demo/demo-plugin-interface/: demo_plugin_interface.h
src/demo-plugin/check-template-parameters/: check_template_parameters.cc
src/demo-pluginloader/: CMakeLists.txt
src/demo-pluginloader/include/simd-diagonal-load-json-demo/demo-pluginloader/: demo_pluginloader.h
src/generate-input/: CMakeLists.txt  generate-input.cc  print_generated_input_template.h
src/input-protobuf/: CMakeLists.txt
src/input-protobuf/include/simd-diagonal-load-json-demo/input-protobuf/: CMakeLists.txt  input.proto
src/lib/capnproto-helper-funcs/: CMakeLists.txt  parsejsonfile.cc
src/lib/capnproto-helper-funcs/include/simd-diagonal-load-json-demo/capnproto-helper-funcs/: CMakeLists.txt  parsejsonfile.h  print_json.h
src/lib/check-valid-numbers/: CMakeLists.txt  check_valid_input_helper_funcs.cc
src/lib/check-valid-numbers/include/simd-diagonal-load-json-demo/check-valid-numbers/: check_valid_input_helper_funcs.h
src/lib/defines-from-cmake-variables/: config.h.in
src/lib/demo-plugin/: CMakeLists.txt  build_time_plugin_config.h.in  demo_plugin.cc  demo_plugin.h  json_matrix.h  print_result.h  result.h
src/lib/demo-plugin-interface/: CMakeLists.txt
src/lib/demo-plugin-interface/include/simd-diagonal-load-json-demo/demo-plugin-interface/: demo_plugin_interface.h
src/lib/demo-plugin/check-template-parameters/: CMakeLists.txt
src/lib/demo-pluginloader/: CMakeLists.txt  demo_pluginloader.cc
src/output-protobuf/: CMakeLists.txt
src/output-protobuf/include/simd-diagonal-load-json-demo/output-protobuf/: CMakeLists.txt  output.proto
src/protobuf-helper-funcs/: CMakeLists.txt  print_json.cc
src/protobuf-helper-funcs/include/simd-diagonal-load-json-demo/protobuf-helper-funcs/: json_input_from_stdin.h  print_json.h
